bpo-40890: Add `mapping` property to dict views (GH-20749)